# rules_mypy

./: MODULE.bazel
